--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "dependencies": {
+    "@types/ws": "^8.18.1",
     "cheerio": "^1.0.0",
+    "fast-csv": "^5.0.2",
     "lodash": "^4.17.21",
     "puppeteer": "^24.6.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "user-agents": "^1.1.515",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.16"
