--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "extensions/autoconsent"]
 	path = extensions/autoconsent
-	url = https://github.com/duckduckgo/autoconsent.git
+	url = https://github.com/hjstn/autoconsent.git
